--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -1,8 +1,6 @@
-.chat-input {
-    border: 1px solid #666;
-}
-.chat-input .MuiInputBase-input {
+.chat-input .MuiOutlinedInput-notchedOutline{
     color: #fff !important;
+    border: 1px solid #fff;
 }
 .chat-input:hover .MuiOutlinedInput-notchedOutline {
     border-color: #888 !important;
